--- a/app/src/main/res/layout/my_listview.xml
+++ b/app/src/main/res/layout/my_listview.xml
@@ -2,16 +2,18 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="@android:color/darker_gray"
+    android:layout_margin="5dp">
 
     <ImageView
-        android:layout_width="120dp"
         android:layout_height="120dp"
         app:srcCompat="@drawable/assassin_logo"
         android:id="@+id/logo_1"
-        android:layout_weight="1"
-        android:cropToPadding="false"
-        android:layout_margin="15dp" />
+        android:layout_weight="0.00"
+        android:layout_margin="15dp"
+        android:layout_width="120dp"
+        android:cropToPadding="false" />
 
     <LinearLayout
         android:orientation="vertical"
@@ -34,6 +36,7 @@
             android:id="@+id/Detail_1"
             android:textSize="@dimen/h2"
             android:textStyle="normal|italic" />
+
     </LinearLayout>
 
 </LinearLayout>
