--- a/app/src/main/res/layout/my_listview.xml
+++ b/app/src/main/res/layout/my_listview.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@android:color/darker_gray"
+    android:background="@color/bg"
     android:layout_margin="5dp">
 
     <ImageView
@@ -22,18 +22,18 @@
         android:gravity="center_vertical">
 
         <TextView
-            android:text="Title_1"
+            android:text="Title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/Title_1"
+            android:id="@+id/Title"
             android:textSize="@dimen/h1"
             android:textStyle="normal|bold" />
 
         <TextView
-            android:text="Detail_1"
+            android:text="Detail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/Detail_1"
+            android:id="@+id/Detail"
             android:textSize="@dimen/h2"
             android:textStyle="normal|italic" />
 
