--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#FF4081</color>
 
     <color name="text">#ffffff</color>
+    <color name="bg">#aaaaaaaa</color>
 </resources>
